fix scroll on mobile

--- a/main.css
+++ b/main.css
@@ -82,8 +82,21 @@ h4 {
   margin: 0;
 }
 
+#container {
+  position: relative;
+  height: 100%;
+  width: fit-content;
+  overflow: hidden;
+  margin: auto;
+}
+
 /* tablet, phone portrait */
 @media screen and (max-width: 768px) {
+  #container {
+    max-width: 100vw;
+    overflow-x: hidden;
+  }
+
   #start img {
     width: 50vw;
   }
@@ -99,14 +112,6 @@ h4 {
   h4 {
     font-size: 75;
   }
-}
-
-#container {
-  position: relative;
-  height: 100%;
-  width: fit-content;
-  overflow: hidden;
-  margin: auto;
 }
 
 .shown {
